--- a/news.html
+++ b/news.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=31802027"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=3851437788" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3923953633"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=291059082" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_news.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=402894642"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_news.css?crc=3937268796" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_news.css?crc=475307096" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem" id="pu67883-3"><!-- group -->
-      <div class="clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
+      <div class="gradient clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
        <p>&nbsp;</p>
       </div>
       <nav class="MenuBar clearfix grpelem" id="menuu56290" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- horizontal box -->
@@ -97,7 +97,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem shared_content" id="pu4039-28" data-content-guid="pu4039-28_content"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U4039-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="rounded-corners clearfix grpelem" id="u4039-28" data-muse-uid="U4039" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <div class="rounded-corners clearfix grpelem shared_content" id="u4039-28" data-muse-uid="U4039" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u4039-28_content"><!-- content -->
        <p id="u4039-3"><span id="u4039">1st May 2018 -</span><span id="u4039-2"> Dates Agreed</span></p>
        <p id="u4039-5">It was agreed that the reunion would take place on the weekend of the 12th April 2019 and the Cabarfeidh hotel was provisionally booked for the Friday evening.</p>
        <p id="u4039-7">Potential venues for the Saturday afternoon and evening were discussed and will be agreed at our next committee meeting.</p>
@@ -114,14 +114,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u4039-26">&nbsp;</p>
       </div>
       <!-- /m_editable -->
-      <div class="grpelem" id="u96542"><!-- custom html -->
+      <div class="grpelem shared_content" id="u96542" data-content-guid="u96542_content"><!-- custom html -->
        <a class="twitter-timeline" data-width="320" data-height="280" href="https://twitter.com/hebreunion?ref_src=twsrc%5Etfw">Tweets by hebreunion</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
       </div>
      </div>
     </div>
     <div class="verticalspacer shared_content" data-offset-top="999" data-content-above-spacer="998" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
-     <div id="u144"><!-- group -->
+     <div class="gradient" id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
        <div class="clearfix grpelem shared_content" id="u173-4" data-IBE-flags="txtStyleSrc" data-content-guid="u173-4_content"><!-- content -->
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
@@ -326,7 +326,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <span class="size_fixed grpelem placeholder" data-placeholder-for="u97932_content"><!-- placeholder node --></span>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu4039-28_content"><!-- placeholder node --></span>
+     <span class="colelem placeholder" data-placeholder-for="u96542_content"><!-- placeholder node --></span>
+     <!-- m_editable region-id="editable-static-tag-U4039-BP_451" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u4039-28_content"><!-- placeholder node --></span>
+     <!-- /m_editable -->
     </div>
     <div class="verticalspacer" data-offset-top="1023" data-content-above-spacer="1022" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
