updated to blue

--- a/book---pay.html
+++ b/book---pay.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Book + Pay</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4196072754"/>
-  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=420525400" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=21532295"/>
+  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=271574015" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_book---pay.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=402894642"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=335504953" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4218263437"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=3849650913" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script type="text/javascript">
    var muReCAPTCHA2Instances = {};
 var muReCAPTCHA2OnloadCallback = function() {
-	muReCAPTCHA2Instances['widgetu7615'] = grecaptcha.render('widgetu7615_recaptcha2', {"type":"image","sitekey":"6LeGxyYUAAAAAD5IiqN_WFlSYB0-oySsyvEU4Ay0","size":"normal","theme":"light"});
+	muReCAPTCHA2Instances['widgetu7615'] = grecaptcha.render('widgetu7615_recaptcha2', {"type":"image","size":"normal","theme":"light","sitekey":"6LeGxyYUAAAAAD5IiqN_WFlSYB0-oySsyvEU4Ay0"});
 };
 </script>
    </head>
@@ -428,7 +428,7 @@ var muReCAPTCHA2OnloadCallback = function() {
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
        </div>
        <div class="clip_frame grpelem" id="u65379"><!-- image -->
-        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9349112426035503" data-image-width="169" data-image-height="158" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0298507462686568" data-image-width="134" data-image-height="138" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -773,7 +773,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9312977099236641" data-image-width="131" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -802,7 +802,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u14852-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn gradient clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15468-4_0_content">Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15497-4_0_content">About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15476-4_0_content">News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15519-4_0_content">Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15482-4_0_content">Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15489-4_0_content">Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u93919-4_0_content">Memories</p></div></a></div></nav></div></li>
       </ul>
-      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u113455"><!-- image -->
+      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u113455" data-content-guid="u113455_content"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped.png?crc=48106106" alt="" width="92" height="95" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
@@ -1092,7 +1092,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9333333333333333" data-image-width="90" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -1121,9 +1121,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="accordionu14850"><!-- vertical box -->
        <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u14851"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u14852-3"><!-- content --><span class="placeholder" data-placeholder-for="u14852-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn gradient clearfix colelem temp_no_id" data-orig-id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="menuu15463"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u15465"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15468-4"><!-- content --><span class="placeholder" data-placeholder-for="u15468-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="about.html" data-href="page:U252" data-orig-id="u15495"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15497-4"><!-- content --><span class="placeholder" data-placeholder-for="u15497-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="news.html" data-href="page:U264" data-orig-id="u15474"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15476-4"><!-- content --><span class="placeholder" data-placeholder-for="u15476-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="programme.html" data-href="page:U276" data-orig-id="u15516"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15519-4"><!-- content --><span class="placeholder" data-placeholder-for="u15519-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="booking.html" data-href="page:U12766" data-orig-id="u15481"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15482-4"><!-- content --><span class="placeholder" data-placeholder-for="u15482-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u15488"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15489-4"><!-- content --><span class="placeholder" data-placeholder-for="u15489-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u93916"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u93919-4"><!-- content --><span class="placeholder" data-placeholder-for="u93919-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
       </ul>
-      <div class="clip_frame grpelem temp_no_id" data-orig-id="u113455"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped-crop-u113455.png?crc=3814271501" alt="" data-heightwidthratio="1.0434782608695652" data-image-width="69" data-image-height="72" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
+      <span class="clip_frame grpelem placeholder" data-placeholder-for="u113455_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U7237-BP_600" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
@@ -1411,7 +1409,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9264705882352942" data-image-width="68" data-image-height="63" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0327868852459017" data-image-width="61" data-image-height="63" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
