--- a/programme.html
+++ b/programme.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Programme</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4018102804"/>
-  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=3793151968" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=21532295"/>
+  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=433467567" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_programme.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=402894642"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=4085854778" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4218263437"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=200631464" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem" id="pu67883-3"><!-- group -->
-      <div class="gradient clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
+      <div class="clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
        <p>&nbsp;</p>
       </div>
       <nav class="MenuBar clearfix grpelem" id="menuu56290" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- horizontal box -->
@@ -176,13 +176,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="verticalspacer shared_content" data-offset-top="1499" data-content-above-spacer="1499" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
-     <div class="gradient" id="u144"><!-- group -->
+     <div id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
        <div class="clearfix grpelem shared_content" id="u173-4" data-IBE-flags="txtStyleSrc" data-content-guid="u173-4_content"><!-- content -->
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
        </div>
        <div class="clip_frame grpelem" id="u65379"><!-- image -->
-        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9349112426035503" data-image-width="169" data-image-height="158" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0298507462686568" data-image-width="134" data-image-height="138" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -193,7 +193,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="pu67883-3"><!-- group -->
-      <span class="gradient clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
+      <span class="clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
       <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="menuu56290"><!-- horizontal box -->
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u56291"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u56292"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u56293-4"><!-- content --><span class="placeholder" data-placeholder-for="u56293-4_0_content"><!-- placeholder node --></span></div></a>
@@ -244,11 +244,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
-     <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
+     <div class="temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9312977099236641" data-image-width="131" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -283,7 +283,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9333333333333333" data-image-width="90" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
