--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4196072754"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3819455713" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=21532295"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=341422354" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=402894642"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=339383464" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4218263437"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=187989772" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script type="text/javascript">
    var muReCAPTCHA2Instances = {};
 var muReCAPTCHA2OnloadCallback = function() {
-	muReCAPTCHA2Instances['widgetu8199'] = grecaptcha.render('widgetu8199_recaptcha2', {"type":"image","sitekey":"6LeGxyYUAAAAAD5IiqN_WFlSYB0-oySsyvEU4Ay0","size":"normal","theme":"light"});
+	muReCAPTCHA2Instances['widgetu8199'] = grecaptcha.render('widgetu8199_recaptcha2', {"type":"image","size":"normal","theme":"light","sitekey":"6LeGxyYUAAAAAD5IiqN_WFlSYB0-oySsyvEU4Ay0"});
 };
 </script>
    </head>
@@ -175,7 +175,7 @@ var muReCAPTCHA2OnloadCallback = function() {
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
        </div>
        <div class="clip_frame grpelem" id="u65379"><!-- image -->
-        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9349112426035503" data-image-width="169" data-image-height="158" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0298507462686568" data-image-width="134" data-image-height="138" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -295,7 +295,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9312977099236641" data-image-width="131" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -411,7 +411,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9230769230769231" data-image-width="91" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.024390243902439" data-image-width="82" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -498,7 +498,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9333333333333333" data-image-width="90" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
