--- a/memories.html
+++ b/memories.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Memories</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4196072754"/>
-  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=3898653774" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=21532295"/>
+  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=489545699" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_memories.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=402894642"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=4293123103" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4218263437"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=148585559" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -161,7 +161,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
        </div>
        <div class="clip_frame grpelem" id="u65379"><!-- image -->
-        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9349112426035503" data-image-width="169" data-image-height="158" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0298507462686568" data-image-width="134" data-image-height="138" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -207,7 +207,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u113455"><!-- image -->
+      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u113455" data-content-guid="u113455_content"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped.png?crc=48106106" alt="" width="133" height="137" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
@@ -277,7 +277,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9312977099236641" data-image-width="131" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -323,9 +323,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id" data-orig-id="u113455"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped-crop-u113455.png?crc=3814271501" alt="" data-heightwidthratio="1.032258064516129" data-image-width="93" data-image-height="96" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
+      <span class="clip_frame grpelem placeholder" data-placeholder-for="u113455_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U6080-BP_807" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u6080-4_content"><!-- placeholder node --></span>
@@ -393,7 +391,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9340659340659341" data-image-width="91" data-image-height="85" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0365853658536586" data-image-width="82" data-image-height="85" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -478,7 +476,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9333333333333333" data-image-width="90" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
